--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 ondrag="drag(event)" width="336" height="200">
    </div>
     <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <div>Hello world</div>
     <script type="text/javascript">  
         function drag(ev){
             console.log('drag start');
