--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ ondrag="drag(event)" width="336" height="200">
    </div>
     <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <div>Hello world</div>
+    <p>PTE</p>
     <script type="text/javascript">  
         function drag(ev){
             console.log('drag start');
